# pyskna

./: .gitignore  LICENSE.md  PATENT_NOTICE.md  README.md  pyproject.toml
docs/: API.md  CODEOWNERS
pyskna/: __init__.py  __version__.py  _vfcdm.py  _vfcdm_installer.py  process_iskna.py  process_tvskna.py
pyskna/libs/: libvfcdm5_mac64.dylib
tests/: test.py
